force-app/main/default/objects/Rescheduling__mdt/Rescheduling__mdt.object-meta.xml
<CustomObject>
    <description>This will store reschedule charges</description>
    <label>Rescheduling</label>
    <pluralLabel>Reschedulings</pluralLabel>
</CustomObject>