force-app/main/default/objects/Rescheduling__mdt/fields/Applicable_Per_Booking__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Per_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if it is applicable for whole booking</description>
    <label>Applicable Per Booking?</label>
    <type>Checkbox</type>
</CustomField>