force-app/main/default/objects/Rescheduling__mdt/fields/Charges_After_Free_Rescheduling__c.field-meta.xml
<CustomField>
    <fullName>Charges_After_Free_Rescheduling__c</fullName>
    <label>Charges After Free Rescheduling</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>