force-app/main/default/objects/Rescheduling__mdt/fields/Charges_in_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Charges_in_Percentage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charges in Percentage</label>
    <type>Checkbox</type>
</CustomField>