force-app/main/default/objects/Rescheduling__mdt/fields/Greater_Than__c.field-meta.xml
<CustomField>
    <fullName>Greater_Than__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Greater Than</label>
    <type>Checkbox</type>
</CustomField>