force-app/main/default/objects/Rescheduling__mdt/fields/Less_Than__c.field-meta.xml
<CustomField>
    <fullName>Less_Than__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Less Than</label>
    <type>Checkbox</type>
</CustomField>