force-app/main/default/objects/Rescheduling__mdt/fields/Policy_Applied__c.field-meta.xml
<CustomField>
    <fullName>Policy_Applied__c</fullName>
    <label>Policy Applied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>